--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         />  -->
     
-    <TextView
-        android:id="@+id/path"
+    <ImageView
+        android:id="@+id/imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
