--- a/res/layout/activity_sdlist.xml
+++ b/res/layout/activity_sdlist.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <ListView 
-         android:id="@+id/listview" 
+    <GridView 
+         android:id="@+id/gridView" 
          android:layout_width="fill_parent" 
          android:layout_height="fill_parent" 
          android:gravity="center" />
